fix(client): Don't cut off drink images glow at the top of the drink selector

--- a/Website/src/globalStyle.css
+++ b/Website/src/globalStyle.css
@@ -20,6 +20,7 @@ main {
 	display: flex;
 	max-width: 400px;
 	width: 100%;
+	padding-top: 70px;
 	overflow-x: scroll;
 	scroll-snap-type: x mandatory;
 	margin: 0px auto;
@@ -98,8 +99,12 @@ input[type="number"]::-webkit-inner-spin-button {
 #search {
 	font-size: 20pt;
 	text-align: center;
-	margin: 30px;
+	margin: 30px 0;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
 	max-width: calc(100% - 60px);
+	z-index: 100;
 }
 #search:focus-visible {
 	outline: none;
